<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidSample</string>
    <string name="createNewDevice">Create new device</string>
    <string name="title_activity_accounts">Accounts service</string>
    <string name="action_cancel">Cancel</string>
    <string name="title_section1">SAMI</string>
    <string name="title_section2">Devices</string>
    <string name="title_section3">Logout</string>
    <string name="action_settings">Register</string>
    <string name="devices_section1">Manifest</string>
    <string name="devices_section2">Messages</string>
    <string name="devices_section3">Test</string>
    <string name="messages_section1">Details</string>
    <string name="uid">ID</string>
    <string name="name">Name</string>
    <string name="fullName">Full Name</string>
    <string name="email">Email</string>
    <string name="created">Created</string>
    <string name="modified">Modified</string>
    <string name="title_activity_register">New device</string>
    <string name="device_type">Type</string>
    <string name="device_name">Name</string>

</resources>
